--- a/VLESS-XTLS-uTLS-REALITY/steal_oneself/config_server.json
+++ b/VLESS-XTLS-uTLS-REALITY/steal_oneself/config_server.json
@@ -36,10 +36,14 @@
                     "dest": "8001",
                     "xver": 1, // 发送 PROXY protocol
                     "serverNames": [ // 客户端可用的 serverName 列表，暂不支持 * 通配符
-                        "chika.example.com" // 与 Nginx 配置中的 server_name 一致
+                        "www.lovelive-anime.jp" // 与 Nginx 配置中的 server_name 一致
                     ],
                     "privateKey": "2KZ4uouMKgI8nR-LDJNP1_MHisCJOmKGj9jUjZLncVU", // 执行 xray x25519 生成，填 "Private key" 的值
                     "shortIds": [ // 客户端可用的 shortId 列表，可用于区分不同的客户端
+                        "", // 若有此项，客户端 shortId 可为空
+                        "a1", // 0 到 f，长度为 2 的倍数，长度上限为 16，或执行 openssl rand -hex 8 生成
+                        "b2",
+                        "c3",                   
                         "6ba85179e30d4fc2" // 0 到 f，长度为 2 的倍数，长度上限为 16，可留空，或执行 openssl rand -hex 8 生成
                     ]
                 }
