--- a/VLESS-XTLS-uTLS-REALITY/steal_oneself/nginx.conf
+++ b/VLESS-XTLS-uTLS-REALITY/steal_oneself/nginx.conf
@@ -51,7 +51,7 @@ http {
         set_real_ip_from           127.0.0.1;
         real_ip_header             proxy_protocol;
 
-        server_name                chika.example.com; # 填由 Nginx 加载的 SSL 证书中包含的域名，建议将域名指向服务端的 IP
+        server_name                www.lovelive-anime.jp; # 填由 Nginx 加载的 SSL 证书中包含的域名，建议将域名指向服务端的 IP
 
         ssl_certificate            /etc/ssl/private/fullchain.cer;
         ssl_certificate_key        /etc/ssl/private/private.key;
