--- a/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
+++ b/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
@@ -40,8 +40,8 @@
                     "target": "8001",
                     "xver": 1, // 发送 PROXY protocol
                     "serverNames": [
-                        "example.com", // 与 Nginx 配置中的 server_name 一致
-                        "chika.example.com"
+                        "amst.aranya.eu.org", // 与 Nginx 配置中的 server_name 一致
+                        "www.lovelive-anime.jp"
 
                     ],
                     "privateKey": "",
