--- a/VLESS-XHTTP-REALITY/steal_oneself/nginx.conf
+++ b/VLESS-XHTTP-REALITY/steal_oneself/nginx.conf
@@ -53,7 +53,7 @@ http {
         real_ip_header             proxy_protocol;
 
 # 填 SSL 证书中包含的域名，建议将域名指向服务端的 IP，多个域名以空格分隔
-        server_name                example.com chika.example.com;
+        server_name                amst.aranya.eu.org www.lovelive-anime.jp;
 
         ssl_certificate            /etc/ssl/private/fullchain.cer;
         ssl_certificate_key        /etc/ssl/private/private.key;
