--- a/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
+++ b/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
@@ -44,9 +44,9 @@
                         "www.lovelive-anime.jp"
 
                     ],
-                    "privateKey": "",
+                    "privateKey": "Z84J2IelR9ch3k8VtlVhhs5ycBUlXA7wHBWcBrjqnAw",
                     "shortIds": [
-                        ""
+                        "6ba85179e30d4fc2"
                     ]
                 }
             },
