--- a/VLESS-XHTTP-REALITY/steal_oneself/config_client.json
+++ b/VLESS-XHTTP-REALITY/steal_oneself/config_client.json
@@ -49,9 +49,9 @@
                 "security": "reality",
                 "realitySettings": {
                     "fingerprint": "chrome",
-                    "serverName": "example.com", // 与服务端一致
-                    "publicKey": "",
-                    "shortId": ""
+                    "serverName": "amst.aranya.eu.org", // 与服务端一致
+                    "publicKey": "Z84J2IelR9ch3k8VtlVhhs5ycBUlXA7wHBWcBrjqnAw",
+                    "shortId": "6ba85179e30d4fc2"
                 }
             },
             "tag": "proxy"
