--- a/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
+++ b/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
@@ -40,9 +40,7 @@
                     "target": "8001",
                     "xver": 1, // 发送 PROXY protocol
                     "serverNames": [
-                        "amst.aranya.eu.org", // 与 Nginx 配置中的 server_name 一致
-                        "www.lovelive-anime.jp"
-
+                        "amst.aranya.eu.org" // 与 Nginx 配置中的 server_name 一致
                     ],
                     "privateKey": "2KZ4uouMKgI8nR-LDJNP1_MHisCJOmKGj9jUjZLncVU",
                     "shortIds": [
