--- a/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
+++ b/VLESS-XHTTP-REALITY/steal_oneself/config_server.json
@@ -44,7 +44,11 @@
                     ],
                     "privateKey": "2KZ4uouMKgI8nR-LDJNP1_MHisCJOmKGj9jUjZLncVU",
                     "shortIds": [
-                        "6ba85179e30d4fc2"
+                        "", // 若有此项，客户端 shortId 可为空
+                        "a1", // 0 到 f，长度为 2 的倍数，长度上限为 16，或执行 openssl rand -hex 8 生成
+                        "b2",
+                        "c3",                   
+                        "6ba85179e30d4fc2" // 0 到 f，长度为 2 的倍数，长度上限为 16，可留空，或执行 openssl rand -hex 8 生成
                     ]
                 }
             },
