--- a/VLESS-XHTTP-REALITY/steal_oneself/config_client.json
+++ b/VLESS-XHTTP-REALITY/steal_oneself/config_client.json
@@ -51,7 +51,7 @@
                     "fingerprint": "chrome",
                     "serverName": "amst.aranya.eu.org", // 与服务端一致
                     "publicKey": "Z84J2IelR9ch3k8VtlVhhs5ycBUlXA7wHBWcBrjqnAw",
-                    "shortId": "6ba85179e30d4fc2"
+                    "shortId": "a1"
                 }
             },
             "tag": "proxy"
